fix学习